--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css">
+
     <link rel="stylesheet" href="./css/owl.carousel.min.css">
     <link rel="stylesheet" href="./css/owl.theme.default.min.css">
 
@@ -29,7 +30,8 @@
                 <a class="navbar-brand" href="#">
                     <img src="images/logo.png" alt="logo">
                 </a>
-                <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse"
+                    data-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon "></span>
                 </button>
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
@@ -314,7 +316,7 @@
                         Căn hộ điển hình A09 – B09<br>
                         (Diện tích: 67.5m2)
                     </div>
-                </div> 
+                </div>
                 <div class="col-md-3 plus-zoom"><img src="images/ch3.jpg" alt="">
                     <div class="cap-mat">
                         Căn hộ điển hình A05 – B05<br>
@@ -358,6 +360,20 @@
         </div>
     </section>
 
+    
+
+    <div id="IntroMenu" style="right: 25px;">
+        <a href=""><span class="icon1" title="Messenger" ><i class="fab fa-facebook-messenger"></i></span></a>
+        <a href=""><span class="icon2" title="Điện thoại"><i class="fas fa-phone"></i></span></a>
+        <a href=""><span class="icon3" title="Tin nhắn"><i class="fas fa-envelope "></i></span></a>
+    </div>
+
+    <div id="Intro" style="bottom: 25px;">
+        <a href=""><span class="icon5" title="Messenger" ><img src="images/dang-ky-tu-van.gif" alt=""></span></a>
+        <a href=""><span class="icon6" title="Điện thoại"><img src="images/hotline.png" alt=""></span></a>
+   
+    </div>
+
     <footer id="footer">
         <img src="images/logo-footer.png" alt="">
         <p>Hotline: 0976 23 78 66</p>
@@ -370,6 +386,8 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
+    <script src="js/index.js"></script>
+
 
 </body>
 
