--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
                             <a class="nav-link" href="#">Liên hệ </a>
                         </li>
                         <li class="item ">
-                            <a class="link" href="#"><img src="images/phone.gif" alt="phone"><span id="phone">0976 23 78
-                                    66</span> </a>
+                            <a class="link" href="#"><img src="images/phone.gif" alt="phone"><span id="phone">0812 340 999</span> </a>
                         </li>
                     </ul>
                 </div>
@@ -68,7 +67,7 @@
 
     </section>
 
-    <section>
+    <section id="banner">
         <div id="carouselId" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carouselId" data-slide-to="0" class="active"></li>
@@ -376,7 +375,7 @@
 
     <footer id="footer">
         <img src="images/logo-footer.png" alt="">
-        <p>Hotline: 0976 23 78 66</p>
+        <p>Hotline: 0812 340 999</p>
         <p>Địa chỉ: 161 Ngọc Hồi, KĐT Pháp Vân, Hoàng Mai, Hà Nội</p>
         <p>Copyright 2019 © Chung cư Athena Complex Pháp Vân</p>
     </footer>
