--- a/index.html
+++ b/index.html
@@ -40,22 +40,22 @@
                             <a class="nav-link" href="#">Trang chủ</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Giới thiệu</a>
+                            <a class="nav-link" href="#info">Giới thiệu</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Chính sách </a>
+                            <a class="nav-link" href="#tiendo">Chính sách </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Mặt bằng </a>
+                            <a class="nav-link" href="#matbang">Mặt bằng </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Liên kết vùng </a>
+                            <a class="nav-link" href="#lienket">Liên kết vùng </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Tin tức </a>
+                            <a class="nav-link" href="http://chungcuathenaphapvan.info/category/tin-tuc/">Tin tức </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Liên hệ </a>
+                            <a class="nav-link" href="#footer">Liên hệ </a>
                         </li>
                         <li class="item ">
                             <a class="link" href="#"><img src="images/phone.gif" alt="phone"><span id="phone">0812 340 999</span> </a>
@@ -64,7 +64,43 @@
                 </div>
             </nav>
         </div>
-
+        <nav class="navbar navbar-expand-md menu navbar-light " id="navbar">
+            <a class="navbar-brand" href="#">
+                <img src="images/logo.png" alt="logo">
+            </a>
+            <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse"
+                data-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon "></span>
+            </button>
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Trang chủ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#info">Giới thiệu</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#tiendo">Chính sách </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#matbang">Mặt bằng </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#lienket">Liên kết vùng </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="http://chungcuathenaphapvan.info/category/tin-tuc/">Tin tức </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#footer">Liên hệ </a>
+                    </li>
+                    <li class="item ">
+                        <a class="link" href="#"><img src="images/phone.gif" alt="phone"><span id="phone">0812 340 999</span> </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </section>
 
     <section id="banner">
