--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section id="menu">
         <div class="container ">
             <nav class="navbar navbar-expand-md menu navbar-light ">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <img src="images/logo.png" alt="logo">
                 </a>
                 <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse"
@@ -37,7 +37,7 @@
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Trang chủ</a>
+                            <a class="nav-link" href="index.html">Trang chủ</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#info">Giới thiệu</a>
@@ -52,19 +52,20 @@
                             <a class="nav-link" href="#lienket">Liên kết vùng </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="http://chungcuathenaphapvan.info/category/tin-tuc/">Tin tức </a>
+                            <a class="nav-link" href="tintuc.html">Tin tức </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#footer">Liên hệ </a>
                         </li>
                         <li class="item ">
-                            <a class="link" href="#"><img src="images/phone.gif" alt="phone"><span id="phone">0812 340 999</span> </a>
+                            <a class="link" href="#"><img src="images/phone.gif" alt="phone"><span id="phone">0812 340
+                                    999</span> </a>
                         </li>
                     </ul>
                 </div>
             </nav>
         </div>
-        
+
         <nav class="navbar navbar-expand-md menu navbar-light " id="navbar">
             <a class="navbar-brand" href="#">
                 <img src="images/logo.png" alt="logo">
@@ -91,13 +92,14 @@
                         <a class="nav-link" href="#lienket">Liên kết vùng </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="http://chungcuathenaphapvan.info/category/tin-tuc/">Tin tức </a>
+                        <a class="nav-link" href="tintuc.html">Tin tức </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#footer">Liên hệ </a>
                     </li>
                     <li class="item ">
-                        <a class="link" href="#"><img src="images/phone.gif" alt="phone"><span id="phone">0812 340 999</span> </a>
+                        <a class="link" href="#"><img src="images/phone.gif" alt="phone"><span id="phone">0812 340
+                                999</span> </a>
                     </li>
                 </ul>
             </div>
@@ -329,17 +331,33 @@
                 hiểm.
             </p>
             <div class="row">
-                <div class="col-md-6 plus-zoom"><img src="images/mat-bang1.jpg" alt=""></div>
-                <div class="col-md-6 plus-zoom"><img src="images/mat-bang2.jpg" alt=""></div>
+                <div class="col-md-6 ">
+                    <div class="plus-zoom">
+                        <img src="images/mat-bang1.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-md-6 ">
+                    <div class="plus-zoom">
+                        <img src="images/mat-bang2.jpg" alt="">
+                    </div>
+                </div>
             </div>
             <div class="row">
-                <div class="col-md-3 plus-zoom"><img src="images/can-ho-3.jpg" alt="">
+                <div class="col-md-3 ">
+                    <div class="plus">
+                        <img src="images/can-ho-3.jpg" alt="">
+                    </div>
                     <div class="cap-mat">
                         <p>A01 – B01 (Diện tích: 90.5m2)</p>
                         <p>A04 – B04 (Diện tích: 90.2m2)</p>
                     </div>
+
                 </div>
-                <div class="col-md-3 plus-zoom"><img src="images/ch1.jpg" alt="">
+                <div class="col-md-3 ">
+                    <div class="plus">
+                        <img src="images/ch1.jpg" alt="">
+                    </div>
+
                     <div class="cap-mat">
                         <p>A01 – B01 (Diện tích: 69m2)
                         </p>
@@ -347,19 +365,24 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-3 plus-zoom "><img src="images/ch2.jpg" alt="">
+                <div class="col-md-3">
+                    <div class="plus">
+                        <img src="images/ch2.jpg" alt="">
+                    </div>
                     <div class="cap-mat">
                         Căn hộ điển hình A09 – B09<br>
                         (Diện tích: 67.5m2)
                     </div>
                 </div>
-                <div class="col-md-3 plus-zoom"><img src="images/ch3.jpg" alt="">
+                <div class="col-md-3 ">
+                    <div class="plus">
+                        <img src="images/ch3.jpg" alt="">
+                    </div>
                     <div class="cap-mat">
                         Căn hộ điển hình A05 – B05<br>
                         (Diện tích: 65.5m2)
                     </div>
                 </div>
-
             </div>
         </div>
     </section>
@@ -371,43 +394,70 @@
                 </h3>
             </div>
             <div class="row">
-                <div class="col-md-4 plus-zoom">
-                    <img src="images/tt1.png" alt="">
-                    <div class="cap-mat">
-                        <h3>CHUNG CƯ ATHENA COMPLEX PHÁP VÂN – LỰA CHỌN VÀNG CHO KHÁCH HÀNG TẦM TRUNG</h3>
-                        <p>Chung cư Athena Complex Pháp Vân được khởi công vào tháng 9/2018,...</p>
-                    </div>
+                <div class="col-md-4 ">
+                    <a href="chitiet.html">
+                        <div class="plus">
+                            <img src="images/tt1.png" alt="">
+                        </div>
+                        <div class="cap-mat">
+                            <h3>CHUNG CƯ ATHENA COMPLEX PHÁP VÂN – LỰA CHỌN VÀNG CHO KHÁCH HÀNG TẦM TRUNG</h3>
+                            <p>Chung cư Athena Complex Pháp Vân được khởi công vào tháng 9/2018,...</p>
+                        </div>
+                        <div class="info">
+                            <p><i class="far fa-calendar-alt"></i> <span>TH6 27,2019</span>&emsp;&emsp;<i
+                                    class="far fa-comment"></i><span>Bình luận</span>
+                            </p>
+                        </div>
+                    </a>
                 </div>
-                <div class="col-md-4 plus-zoom">
-                    <img src="images/tt2.jpg" alt="">
-                    <div class="cap-mat">
-                        <h3>VÌ SAO KHÁCH HÀNG ĐẶT MUA ATHENA COMPLEX PHÁP VÂN</h3>
-                        <p>Dự án chung cư Athena Complex với tổng diện tích 6088 m2 sẽ được cất ...</p>
-                    </div>
+                <div class="col-md-4 ">
+                    <a href="chitiet.html">
+                        <div class="plus">
+                            <img src="images/tt2.jpg" alt="">
+
+                        </div>
+                        <div class="cap-mat">
+                            <h3>CHUNG CƯ ATHENA COMPLEX PHÁP VÂN – LỰA CHỌN VÀNG CHO KHÁCH HÀNG TẦM TRUNG</h3>
+                            <p>Dự án chung cư Athena Complex với tổng diện tích 6088 m2 sẽ được cất ...</p>
+                        </div>
+                        <div class="info">
+                            <p><i class="far fa-calendar-alt"></i> <span>TH6 27,2019</span>&emsp;&emsp;<i
+                                    class="far fa-comment"></i><span>Bình luận</span>
+                            </p>
+                        </div>
+                    </a>
                 </div>
-                <div class="col-md-4 plus-zoom">
-                    <img src="images/tt1.png" alt="">
-                    <div class="cap-mat">
-                        <h3>CHUNG CƯ ATHENA COMPLEX PHÁP VÂN – LỰA CHỌN VÀNG CHO KHÁCH HÀNG TẦM TRUNG</h3>
-                        <p>Chung cư Athena Complex Pháp Vân được khởi công vào tháng 9/2018,... </p>
-                    </div>
+                <div class="col-md-4">
+                    <a href="chitiet.html">
+                        <div class="plus">
+                            <img src="images/tt1.png" alt="">
+
+                        </div>
+                        <div class="cap-mat">
+                            <h3>CHUNG CƯ ATHENA COMPLEX PHÁP VÂN – LỰA CHỌN VÀNG CHO KHÁCH HÀNG TẦM TRUNG</h3>
+                            <p>Chung cư Athena Complex Pháp Vân được khởi công vào tháng 9/2018,... </p>
+                        </div>
+                        <div class="info">
+                            <p><i class="far fa-calendar-alt"></i> <span>TH6 27,2019</span>&emsp;&emsp;<i
+                                    class="far fa-comment"></i><span>Bình luận</span>
+                            </p>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
     </section>
 
-    
-
     <div id="IntroMenu" style="right: 25px;">
-        <a href=""><span class="icon1" title="Messenger" ><i class="fab fa-facebook-messenger"></i></span></a>
+        <a href=""><span class="icon1" title="Messenger"><i class="fab fa-facebook-messenger"></i></span></a>
         <a href=""><span class="icon2" title="Điện thoại"><i class="fas fa-phone"></i></span></a>
         <a href=""><span class="icon3" title="Tin nhắn"><i class="fas fa-envelope "></i></span></a>
     </div>
 
     <div id="Intro" style="bottom: 25px;">
-        <a href=""><span class="icon5" title="Messenger" ><img src="images/dang-ky-tu-van.gif" alt=""></span></a>
+        <a href=""><span class="icon5" title="Messenger"><img src="images/dang-ky-tu-van.gif" alt=""></span></a>
         <a href=""><span class="icon6" title="Điện thoại"><img src="images/hotline.png" alt=""></span></a>
-   
+
     </div>
 
     <footer id="footer">
@@ -416,7 +466,6 @@
         <p>Địa chỉ: 161 Ngọc Hồi, KĐT Pháp Vân, Hoàng Mai, Hà Nội</p>
         <p>Copyright 2019 © Chung cư Athena Complex Pháp Vân</p>
     </footer>
-
 
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
